--- a/math/9.2.1_2 Random Variable_Independence&Covariance.ipynb
+++ b/math/9.2.1_2 Random Variable_Independence&Covariance.ipynb
@@ -441,15 +441,20 @@
     "$$S = \n",
     "\\begin{bmatrix}\n",
     "\\begin{eqnarray}\n",
-    "s_{x1}^2 \\;\\ & s_{x_1x_2} \\;\\; & \\cdots & s_{x_1x_M}\\\\\n",
-    "\\vdots\\\\\n",
-    "s_{x_1x_M} \\;\\ & s_{x_2x_M} \\;\\; & \\cdots & s_{x_Nx_M}^2\\\\\n",
+    "s_{x1}^2 \\;\\;& s_{x_1x_2} \\;\\;& \\cdots \\;\\;& s_{x_1x_M}\\\\\n",
+    "s_{x_2x_1} \\;\\;& s_{x_2}^2 & \\cdots & s_{x_2x_M}\\\\\n",
+    "\\vdots \\;\\;& \\vdots \\;\\;& \\ddots &\\;\\; \\vdots \\\\\n",
+    "s_{x_Mx_1} \\;\\;& s_{x_Mx_2} \\;\\;& \\cdots \\;\\;& s_{x_M}^2\\\\\n",
     "\\end{eqnarray}\n",
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
     "$$\n",
     "S = \\dfrac{1}{N}X_0^TX_0\n",
+    "$$\n",
+    "-$X_0$ 구하는 법\n",
+    "$$\n",
+    "X_0 = X - \\dfrac{1}{N}1_M1_N^TX\n",
     "$$"
    ]
   },
@@ -463,7 +468,15 @@
     "&=& \\text{Cov}[X] \\\\\n",
     "&=& \\text{E} \\left[ (X - \\text{E}[X])(X-\\text{E}[X])^T\\right]\n",
     "\\\\\n",
-    "\\end{eqnarray}$$"
+    "&=&\n",
+    "\\begin{bmatrix}\n",
+    "\\sigma_{x_1}^2 & \\sigma_{x_1x_2} & \\cdots & \\sigma_{x_1x_M} \\\\\n",
+    "\\sigma_{x_2x_1} & \\sigma_{x_2}^2 & \\cdots & \\sigma_{x_2x_M} \\\\\n",
+    "\\vdots & \\vdots & \\ddots & \\vdots \\\\\n",
+    "\\sigma_{x_Mx_1} & \\sigma_{x_Mx_2} & \\cdots & \\sigma_{x_M}^2\\\\\n",
+    "\\end{bmatrix}\n",
+    "\\end{eqnarray}\n",
+    "$$"
    ]
   },
   {
