add code for new solution

--- a/coding practice/coding pr_lv2_baseball_game.ipynb
+++ b/coding practice/coding pr_lv2_baseball_game.ipynb
@@ -34,6 +34,7 @@
    "outputs": [],
    "source": [
     "def solution(baseball):\n",
+    "    from itertools import permutations\n",
     "    l = list(map(str, range(1, 10)))\n",
     "    후보군 = list(map(''.join ,permutations(l, 3)))\n",
     "    tmp = []\n",
@@ -57,6 +58,71 @@
     "            tmp.append(후보)\n",
     "    \n",
     "    return len(tmp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "풀이 개선"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def solution(baseball):\n",
+    "    from itertools import permutations\n",
+    "    l = list(map(str, range(1, 10)))\n",
+    "    후보군 = list(map(''.join ,permutations(l, 3)))\n",
+    "    ans = 0\n",
+    "    \n",
+    "    for 후보 in 후보군:\n",
+    "        flag = 0\n",
+    "        \n",
+    "        for 부른숫자 in baseball:\n",
+    "            스트라이크, 볼 = 0, 0\n",
+    "            \n",
+    "            # 부른숫자[0]: 숫자, 부른숫자[1]: 스트라이크, 부른숫자[2]: 볼\n",
+    "            for idx in range(3):\n",
+    "                if str(부른숫자[0])[idx] == 후보[idx]:\n",
+    "                    스트라이크 += 1\n",
+    "                elif str(부른숫자[0])[idx] in 후보:\n",
+    "                    볼 += 1\n",
+    "            \n",
+    "            # 후보가 부른숫자와 하나라도 다르면, 부른숫자 더이상 소환X \n",
+    "            # 바로 다음 후보로 넘어감\n",
+    "            if 부른숫자[1] != 스트라이크 or 부른숫자[2] != 볼:\n",
+    "                flag = 1\n",
+    "                break\n",
+    "        \n",
+    "        if flag == 0:\n",
+    "            ans += 1\n",
+    "    \n",
+    "    return ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls = [[123, 1, 1], [356, 1, 0], [327, 2, 0], [489, 0, 1]]\n",
+    "solution(ls)"
    ]
   },
   {
@@ -295,7 +361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
