--- a/math/14.1.3 linear regression basic.ipynb
+++ b/math/14.1.3 linear regression basic.ipynb
@@ -175,18 +175,17 @@
     "## 2. OLS(Ordinary Least Squares)\n",
     "- 가장 기본적인 결정론적 선형 회귀 방법\n",
     "- 잔차제곱합(RSS: Residual Sum of Squares) 최소화\n",
-    "### 2.1.1 예측모형 $$\\hat{y} = Xw$$\n",
-    "### 2.1.2. e(residual vector) $$e = y - \\hat{y} = y - Xw$$\n",
+    "### 2.1.1 예측모형 \n",
+    "$$\\hat{y} = Xw$$\n",
+    "### 2.1.2. e(residual vector) \n",
+    "$$e = y - \\hat{y} = y - Xw$$\n",
     "### 2.1.3. RSS \n",
-    "### $$\n",
-    "\\begin{eqnarray}\n",
+    "### $$ \\begin{eqnarray}\n",
     "e^Te = (y-Xw)^T(y-Xw)\n",
     "\\end{eqnarray}$$\n",
     "### 2.1.4. RSS 최소되는 최적화 조건\n",
-    "### $$\n",
-    "\\dfrac{d \\text{RSS}}{dw} = -2X^Ty + 2X^TXw=0\\\\\n",
-    "X^TXw^* = X^Ty\n",
-    "$$\n",
+    "### $$ \\dfrac{d \\text{RSS}}{dw} = -2X^Ty + 2X^TXw=0\\\\\n",
+    "X^TXw^* = X^Ty $$\n",
     "### 2.1.5. 가중치 벡터 $w^*$\n",
     "### $$(X^TX)^{-1}X^Ty$$\n",
     "##### cf. 주의사항: $X^TX$는 PD($X$: Full rank=선형독립) $\\rightarrow$ invertible matrix\n",
@@ -712,7 +711,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
