add explanation for classification

--- a/math/17.1.3 분류모형.ipynb
+++ b/math/17.1.3 분류모형.ipynb
@@ -8,16 +8,16 @@
     "## 확률적 모형\n",
     "조건부확률conditional probability\n",
     "\n",
-    "    - 확률적 생성generative 모형\n",
+    "    - 확률적 생성generative 모형: 베이즈 정리 사용\n",
     "        * Linear/Quadratic Discriminant Analysis\n",
     "        * Naive Bayes\n",
     "        \n",
-    "    - 확률적 판별discriminative 모형 \n",
+    "    - 확률적 판별discriminative 모형: 조건부확률 함수 추정\n",
     "        * Logistic Regression\n",
     "        * Decision Tree\n",
     "\n",
     "## 판별함수 모형 \n",
-    "경계면decision boundary, 판별함수discriminant function\n",
+    "경계면decision boundary을 찾고 -> 주어진 데이터 위치 계산하는 판별함수discriminant function 구함\n",
     "      \n",
     "    - 종류\n",
     "        * perceptron\n",
@@ -464,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
