correct korean markdown

--- a/math/17.2.2 QDA, LDA 분류모형.ipynb
+++ b/math/17.2.2 QDA, LDA 분류모형.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "- $P(y=k)_{\\text{prior}}$: 근사치 또는 도메인 지식 사용\n",
     "$$\n",
-    "P(y=k)_{\\text{prior}} \\approx \\dfrac{y=k인\\;데이터의\\;수}{모든\\;데이터의\\;수}\n",
+    "P(y=k)_{\\text{prior}} \\approx \\dfrac{theNumberOfData: Y=k}{theNumberOfAllData}\n",
     "$$\n",
     "\n",
     "### 중요  $P(x \\mid y=k)_{\\text{likelihood}}$\n",
