--- a/db/pr_mysql_with_py and sqlAlchemy.ipynb
+++ b/db/pr_mysql_with_py and sqlAlchemy.ipynb
@@ -661,7 +661,7 @@
     }
    ],
    "source": [
-    "engine = create_engine(\"mysql+mysqldb://root:dss@13.209.21.50/city_info_3\")\n",
+    "engine = create_engine(\"mysql+mysqldb://root:password@13.209.21.50/city_info_3\")\n",
     "engine"
    ]
   },
@@ -878,7 +878,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
