--- a/math/18.2 K-means.ipynb
+++ b/math/18.2 K-means.ipynb
@@ -5,6 +5,7 @@
    "metadata": {},
    "source": [
     "# K-Means 클러스터링\n",
+    "- 원형에 적합, cluster 갯수 지정 필요\n",
     "- 아래 목적함수 최소화\n",
     "    - 클러스터 중심위치와 각 데이터가 소속될 클러스터 반복 계산\n",
     "        - Alernating 방식 사용\n",
@@ -22,6 +23,7 @@
     "    - 센터와 각 데이터 거리 계산 -> 최소인 cluster에 편입\n",
     "    - 각 클러스터 내부에서 거리 합산 최소화하는 센터 다시 선정 \n",
     "    - 센터 위치 바뀌었으니 다시 클러스터 편입 작업\n",
+    "    \n",
     "- `KMeans`\n",
     "    - `init`\n",
     "        - random: 초기 중심 임의\n",
