--- a/07.DeepLearning/pytorch/torch alexnet tutorial.ipynb
+++ b/07.DeepLearning/pytorch/torch alexnet tutorial.ipynb
@@ -1,13 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import torch\n",
-    "import torch.nn as nn"
+    "- code: https://github.com/pytorch/vision/blob/master/torchvision/models/alexnet.py"
    ]
   },
   {
@@ -50,6 +47,9 @@
     }
    ],
    "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
     "# input.shape: (224, 224, 3)\n",
     "class AlexNet(nn.Module):\n",
     "    def __init__(self, num_classes=1000):\n",
@@ -98,9 +98,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[epoch 1,imgs  1600] loss: 2.1909800  time: 245.521 s\n",
+      "finish training\n"
+     ]
+    }
+   ],
    "source": [
     "# code: https://www.jianshu.com/p/a45aa4c728e8\n",
     "from __future__ import print_function\n",
@@ -183,20 +192,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of test data: 320; acc: 31\n"
+     ]
+    }
+   ],
    "source": [
     "model.eval()\n",
     "correct = 0\n",
     "total = 0\n",
-    "for data in testloader:\n",
+    "for i, data in enumerate(testloader):\n",
+    "    if i ==20:\n",
+    "        break\n",
     "    img, label = data\n",
     "    output = model(Variable(img))\n",
     "    _, pred = torch.max(output, 1)\n",
     "    total += label.size(0)\n",
-    "    correct += (pred==labels).sum()\n",
+    "    correct += (pred==label).sum()\n",
     "print('# of test data: %d; acc: %d' % (total, 100* correct/total))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "asdf 1 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "b=3\n",
+    "print(f\"asdf {a} {b}\")"
    ]
   }
  ],
